# duckdb-ast

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  LICENSE  README.md  book.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: mdbook.yml  python-package.yml
docs/: conf.py  gh_link.py  index.rst
docs/source/: api.md  api.rst  conf.py  duckdb_ast.models.rst  duckdb_ast.rst  index.rst  modules.rst
duckdb_ast/: __init__.py  __main__.py  conftest.py  generate_schema.py  models.py  parse.py  test_ast.py  test_schema.py
duckdb_ast/snapshots/: snap_test_ast.py  snap_test_schema.py
