[tool.poetry]
name = "duckdb-ast"
version = "0.1.0"
description = ""
authors = ["Elliana May <me@mause.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "duckdb_ast"}]

[tool.poetry.dependencies]
python = "^3.8"
duckdb = "^1.0.0"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
rich = "^13.7.1"
pytest = "^8.2.1"
snapshottest = {git = "https://github.com/syrusakbary/snapshottest"}
pre-commit = {version = "^3.5.0", markers = "python_version >= '3.9'"}
sphinx = {version="^7.1.2", markers = "python_version >= '3.10'"}
mypy = "^1.10.1"
sphinx-autoapi = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
