[project]
name = "duckdb-ast"
version = "0.1.0"
description = ""
authors = [
    {name = "Elliana May", email = "me@mause.me"},
]
license = {text = "MIT"}
readme = "README.md"
packages = ["duckdb_ast"]
requires-python = "<4.0,>=3.8"
dependencies = [
    "duckdb<2.0.0,>=1.0.0",
    "pydantic<3.0.0,>=2.9.2",
]

[tool.uv]
dev-dependencies = [
    "pdbpp<1.0.0,>=0.10.3",
    "rich<14.0.0,>=13.7.1",
    "pytest<9.0.0,>=8.2.1",
    "snapshottest @ git+https://github.com/syrusakbary/snapshottest",
    "pre-commit<4.0.0,>=3.5.0; python_version >= \"3.9\"",
    "sphinx<8.0.0,>=7.1.2; python_version >= \"3.10\"",
    "mypy<2.0.0,>=1.10.1",
    "sphinx-autoapi<4.0.0,>=3.3.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
